Status progress bar ditambahkan [beta]

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <h2>Pio si Tanaman</h2>
             <img src="https://raw.githubusercontent.com/aflacake/piodrink/main/img/pio.png" id="gambarPio" width="200px" height="200px" alt="Gambar Pio si Kecambah" />
             <p id="status"></p>
+            <progress id="progressKonsumsi" max="2025" value="0"></progress>
             <p>Target konsumsi air: <strong>2.025 ml atau setara 8 gelas</strong></p>
             <p>Sudah minum: <span id="jumlahSekarang">0</span> ml</p>
             <p>Tersisa kurang dari: <span id="jumlahTersisa">0</span> ml</p>
