Memperbaiki halaman rusak
Penutupan tag title kehilangan '<' serta penutupan tag '<p>' di manfaat

--- a/bantuan/indexbantuan.html
+++ b/bantuan/indexbantuan.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Piodrink - Bantuan/title>
+        <title>Piodrink - Bantuan</title>
 
         <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/aflacake/piodrink/main/img/pio.png" alt="logo Piodrink">
         <link rel="stylesheet" href="stylebantuan.css">
@@ -46,7 +46,7 @@
         <details>
             <summary><b>Manfaat Piodrink</b></summary>
             <p>Piodrink membantu Kamu dalam perhatian pelacakan minum Kamu yang konsisten serta tertib.</p>
-            <p>Manfaat Piodrink juga menjaga kesehatan tubuh dengan membuat semangat memotivasi Kamu untuk minum yang cukup sedangkan tubuh rata-rata berisi air.
+            <p>Manfaat Piodrink juga menjaga kesehatan tubuh dengan membuat semangat memotivasi Kamu untuk minum yang cukup sedangkan tubuh rata-rata berisi air.</p>
         </details>
         </div>
     </div>
