Menautkan file `alat.js`
Alat yang di fungsikan sekarang, perubahan yang dari pemesanan induknya (67c29aa) namun ini anak komitmen: 3c8b5e4

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         <footer>
             <p>Piodrink - 2025</p>
         </footer>
+
+        <script src="alat.js"></script>
         <script src="gaya.js"></script>
         <script src="script.js"></script>
     </body>
