--- a/tentang/indextentang.html
+++ b/tentang/indextentang.html
@@ -22,7 +22,7 @@
     
     <div class="content">
         <header>
-            <h1>Piodrink</h1>
+            <h1>Piodrink<img src="https://raw.githubusercontent.com/aflacake/piodrink/main/img/piominum.png" width="60px" height="60px" /></h1>
             <p>Kesehatanmu dengan menjaga runtuhan air minum</p>
         </header>
 
