Menambahkan detail terkecil
Titik

--- a/tentang/indextentang.html
+++ b/tentang/indextentang.html
@@ -30,7 +30,7 @@
             <p>Pengingat air putih yang disiplin teratur dengan jadwal dan pengkondisian setelan notifikasi otomatis mengingat Anda kepada jadwal minum yang tidak pernah ditinggalkan secara tertib. Sekarang pengingat air minum di genggaman tangan Anda yang ringan juga tanpa perlu menginstal!</p>
             <p>Piodrink mengingat jadwal mimum secara waktu dari waktu, 1 jam dengan 135 ml setara dengan 15 jam yaitu target air putih Anda adalah 2.025 ml. Pio akan mati jika Anda tidak segera mengambil tindakan air putih Anda. Pulihkan tubuh Anda segara!</p>
             <p>Piodrink berkoloborasi dengan <a href="https://aflacake.github.io/tanahladang/">Tanah Ladang</a>, Pio sendiri adalah <code>tanamanMerah</code> yang dimaksud, tanaman misterius. Ajaibnya tanamanMerah seperti Pio ini tumbuh dengan cara yang unik.</p>
-            <p>Juga, Piodrink dibuat dengan sepenuh hati. Maukah Anda memberikan sumbangan baik besar maupun kecil di GitHub, <a href="https://github.com/aflacake/piodrink/">disini</a></p>
+            <p>Juga, Piodrink dibuat dengan sepenuh hati. Maukah Anda memberikan sumbangan baik besar maupun kecil di GitHub, <a href="https://github.com/aflacake/piodrink/">disini</a>.</p>
         </div>
     </div>
         
