--- a/bantuan/indexbantuan.html
+++ b/bantuan/indexbantuan.html
@@ -35,12 +35,14 @@
             <p>Piodrink aplikasi-web tanaman kecilmu menanti untuk tumbuh kembang bersama dengannya dengan mengubah pola gaya hidup lebih sehat dibandingkan sebelumnya.</p>
         
             <h2>Cara menggunakan</h2>
+            <p>Tidak membutuhkan yang diperlukan, deploy halaman disiapkan atau unduh paket tertera.</p>
             <ul id="daftarPertanyaan">
-                <li>Buka Piodrink di web Kamu</li>
+                <li>Buka Piodrink atau <b> https://aflacake.github.io/piodrink/</b> di web Kamu</li>
                 <li>Dihalaman beranda Piodrink, gulir ke bawah</li>
                 <li>Temukan tombol untuk pelacakapana air minum Kamu</li>
                 <li>Klik atau ketuk tombol <b>"Beri Pio minum"</b> untuk konfirmasi pelacakan</li>
             </ul>
+            <p>Dan sekarang jaga runtuhan pelacakan air minum Kamu dan jangan sampai Pio mati.</p>
         
             <h2>Manfaat Piodrink</h2>
             <p>Piodrink membantu Kamu dalam perhatian pelacakan minum Kamu yang konsisten serta tertib.</p>
