--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             <p>Berikut jumlah banyak tanaman yang Kamu tanaman di Piodrink dan jangan lupa jagalah runtuhanmu juga!</p>
             <h4>Tanaman yang sudah tumbuh:<br /> <h1><span id="jumlahTanaman">0</span></h1></h4>
         </div>
+
+        <div id="totalAirMinum">
+            <p>Total air yang sudah Kamu minum: <br />
+            <h1 id="totalKonsumsi">0</h1>
+            </p>
+        </div>
     </div>
     
     </div>
