Push notifikasi dengan Service Worker
Push notifikasi permintaan dari kedua file Service Worker, penautan ada di JS, `script.js`. Pemesanan dari anak komitmen untuk induk: e271c533930f0f41b925019c7318c5fe04221b58.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Piodrink - Minum Air Putih</title>
 
         <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/aflacake/piodrink/main/img/pio.png" alt="logo Piodrink">
+        <link rel="manifest" href="/manifest.json">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
