--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <script src="alat.js"></script>
         <script src="gaya.js"></script>
-        <script src="db.js"></script>
-        <script src="script.js"></script>
+        <script type="module" src="db.js"></script>
+        <script type="module" src="script.js"></script>
     </body>
 </html>
