--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </footer>
 
         <script src="alat.js"></script>
-        <script type="module" src="gaya.js"></script>
+        <script src="gaya.js"></script>
         <script type="module" src="db.js"></script>
         <script type="module" src="script.js"></script>
     </body>
