--- a/tentang/indextentang.html
+++ b/tentang/indextentang.html
@@ -6,6 +6,7 @@
         <title>Piodrink - Tentang</title>
 
         <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/aflacake/piodrink/main/img/pio.png" alt="logo Piodrink">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styletentang.css">
     </head>
     <body>
@@ -32,6 +33,28 @@
             <p>Piodrink berkoloborasi dengan <a href="https://aflacake.github.io/tanahladang/">Tanah Ladang</a>, Pio sendiri adalah <code>tanamanMerah</code> yang dimaksud, tanaman misterius. Ajaibnya tanamanMerah seperti Pio ini tumbuh dengan cara yang unik.</p>
             <p>Juga, Piodrink dibuat dengan sepenuh hati. Maukah Anda memberikan sumbangan baik besar maupun kecil di GitHub, <a href="https://github.com/aflacake/piodrink/">disini</a>.</p>
         </div>
+
+        <div class="penilaian">
+            <div id="kontenPenilaian">
+                <a>
+                   <h1>5.0/5.0</h1>
+                   <p>**Berdasarkan penilaian lokal</p>
+                </a>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                </div>
+            </div>
+            <h3>Irfan Ludvi Astanto</h3>
+            <p>Suatu aplikasi-web yang belum pernah ada saat ini. Dan menariknya Piodrink belum ada disetiap aplikasi, sehingga membuat Saya tertarik.</p>
+            <br />
+            <h3>Meika Soma Dewi</h3>
+            <p>Aplikasinya ringan di genggaman tangan, bermanfaat untuk kesehatan, dan untuk mengontrol minum dalam sehari-hari</p>
+        </div>
+
     </div>
         
         <footer>
