Membuat rating ulasan mejadi lebih baik beserta tautan daftar bagikan
Mengemukakan daftar pengguna yang sudah memberikan rating beserta ulasannya di Piodrink serta menambahkan tautan daftar bagikan ke pengguna lain, membagikan aplikasi-webnya, komitmen terkait: a46d7b1.

--- a/tentang/indextentang.html
+++ b/tentang/indextentang.html
@@ -36,10 +36,6 @@
 
         <div class="penilaian">
             <div id="kontenPenilaian">
-                <a>
-                   <h1>5.0/5.0</h1>
-                   <p>**Berdasarkan penilaian lokal</p>
-                </a>
                 <div class="rating">
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -47,12 +43,28 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                 </div>
+                <a>
+                   <h1>5.0/5.0</h1>
+                   <p>**Berdasarkan penilaian lokal</p>
+                </a>
             </div>
             <h3>Irfan Ludvi Astanto</h3>
             <p>Suatu aplikasi-web yang belum pernah ada saat ini. Dan menariknya Piodrink belum ada disetiap aplikasi, sehingga membuat Saya tertarik.</p>
             <br />
             <h3>Meika Soma Dewi</h3>
             <p>Aplikasinya ringan di genggaman tangan, bermanfaat untuk kesehatan, dan untuk mengontrol minum dalam sehari-hari</p>
+            <br />
+            <h3>Trianko</h3>
+            <p>Baru pertama kali pakai aplikasi seperti ini.
+ <i>Design</i>nya menarik, mudah digunakan dan tentunya bisa memudahkan monitor kegiatan minum. Salam sehat.</p>
+        </div>
+
+        <div class="listshare">
+            <h2>Menyukai? bagikan momen Kamu di</h2>
+            <div>
+                <a href="https://wa.me/?text=Ayo%20bangun%20runtuhan%20air%20putih%20Kamu%20bersama%20Piodrink:%20https://aflacake.github.io/piodrink/" target="_blank">WhatsApp</a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://aflacake.github.io/piodrink/" target="_blank">Facebook</a>
+            </div>
         </div>
 
     </div>
