--- a/bantuan/indexbantuan.html
+++ b/bantuan/indexbantuan.html
@@ -26,6 +26,12 @@
             <p>Kesehatanmu dengan menjaga runtuhan air minum</p>
         </header>
 
+        <div class="konten">
+        <h2>Papan Informasi</h2>
+            <h3>Aku butuh Notifkasimu!</h3>
+            <p id="kontenNotifPio">Nyalakan notifikasinya untuk berlangganan air putih untukmu agar kesehatanmu terjaga. Mengapa ini penting? Pio si tanaman ini adalah tanaman peliharanmu beri dia minum atau dia akan mati. Beri dia air dengan konsumsi tubuh Anda dengan air setiap 1 jam selama panggilan dari Pio si Tanaman tidak diabaikan, bagikan juga momen yang menyenangkan dengan Pio yang membantu Kamu dalam perubahan gaya hidup.</p>   
+        </div>
+
         <div class="pertanyaan">
             <p>Pio senang Kamu disisinya, beri waktu luang untuk minum air putih atas perintah Pio sendiri, Pio ingin Kamu juga bahagia dengan air putih! Sekarang ambil gelas tuangkan 135 ml untuk tubuh agar sehat.</p>
         
