--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Piodrink adalah aplikasi web yang bertujuan untuk kesehatan pengguna dengan menjaga runtuhan air minum Kamu dengan konsisten dan disiplin">
+
         <title>Piodrink - Minum Air Putih</title>
 
         <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/aflacake/piodrink/main/img/pio.png" alt="logo Piodrink">
@@ -27,12 +29,12 @@
     <div class="content">
     <div class="background">
         <header>
-            <h1>Piodrink<img src="https://raw.githubusercontent.com/aflacake/piodrink/main/img/piominum.png" width="60px" height="60px" /></h1>
+            <h1>Piodrink<img src="https://raw.githubusercontent.com/aflacake/piodrink/main/img/piominum.png" width="60px" height="60px" alt="Logo" /></h1>
             <p>Kesehatanmu dengan menjaga runtuhan air minum</p>
         </header>
 
         <div class="popUpNotif">
-            <img src="https://raw.githubusercontent.com/aflacake/piodrink/main/img/airminum.png" width="50px" height="50px" />
+            <img src="https://raw.githubusercontent.com/aflacake/piodrink/main/img/airminum.png" width="50px" height="50px" alt="Gelas air putih" />
             <p>Minum air 135 selama 15 kali dalam sehari</p>
         </div>
         
@@ -74,6 +76,6 @@
 
         <script src="alat.js"></script>
         <script src="gaya.js" defer></script>
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
     </body>
 </html>
