--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div id="analitikTanaman">
             <p>Berikut jumlah banyak tanaman yang Kamu tanaman di Piodrink dan jangan lupa jagalah runtuhanmu juga!</p>
             <h4>Tanaman yang sudah tumbuh:</h4>
-            <h1><span id="jumlahTanaman">0</span></h1></h4>
+            <h1><span id="jumlahTanaman">0</span></h1>
         </div>
 
         <div id="totalAirMinum">
