Menambahkan meta untuk deskripsi
Deskripsi untuk SEO aplikasi-web Piodrink begitu juga yang lainnya.

--- a/acara/indexacara.html
+++ b/acara/indexacara.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Acara Piodrink adalah tempat untuk menyelamatkan runtuhan Anda dari kehausan dengan motivasi dari rasa semangat dari Pio itu sendiri.">
+
         <title>Piodrink - Minum Air Putih</title>
 
         <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/aflacake/piodrink/main/img/pio.png" alt="logo Piodrink">
