--- a/bantuan/indexbantuan.html
+++ b/bantuan/indexbantuan.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Bantuan Piodrink adalah tempat dimana pusat bantuan bagi panduan pengguna baru.">
+
         <title>Piodrink - Bantuan</title>
 
         <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/aflacake/piodrink/main/img/pio.png" alt="logo Piodrink">
