Menambahkan meta untuk deskripsi

--- a/tentang/indextentang.html
+++ b/tentang/indextentang.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Tentang Piodrink adalah tempat dimana aplikasi-web Piodrink berada untuk menunjukkan identitasnya seperti tentang mengenainya dan rating & ulasan.">
+
         <title>Piodrink - Tentang</title>
 
         <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/aflacake/piodrink/main/img/pio.png" alt="logo Piodrink">
