Menambahkan detail terkecil
Menambahkan simbol titik di meta untuk deskripsi.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Piodrink adalah aplikasi web yang bertujuan untuk kesehatan pengguna dengan menjaga runtuhan air minum Kamu dengan konsisten dan disiplin">
+        <meta name="description" content="Piodrink adalah aplikasi web yang bertujuan untuk kesehatan pengguna dengan menjaga runtuhan air minum Kamu dengan konsisten dan disiplin.">
 
         <title>Piodrink - Minum Air Putih</title>
 
